--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,17 @@ config.h.in
 *~
 configure
 ltmain.sh
-
+.deps/
+Makefile
+config.h
+config.log
+config.status
+libtool
+stamp-h1
+.libs/
+*.la
+*.lo
+manpage.links
+manpage.log
+manpage.refs
+m4/
