Minor changes to quiet libtoolize

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,7 @@ pam_combo_la_SOURCES		= pam_combo.c
 libdir				= @PAMDIR@
 man_MANS			= pam_combo.8 combo.conf.5
 AM_CFLAGS			= -Wall  -DPAM_COMBO_CONFIG=\"/etc/security/combo.conf\"
+ACLOCAL_AMFLAGS 		= -I m4
 
 LIBTOOL_DEPS			= @LIBTOOL_DEPS@
 
