--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,8 @@ AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_SRCDIR([pam_combo.c])
 AC_CANONICAL_TARGET([])
 AM_DISABLE_STATIC
-AM_INIT_AUTOMAKE(pam_combo, 0.1)
+AC_CONFIG_MACRO_DIR([m4])
+AM_INIT_AUTOMAKE(pam_combo, 0.2)
 AM_PROG_LIBTOOL
 dnl AC_SUBST(LIBTOOL_DEPS)
 
